# xiaozhi

DOIT_AI/: .gitignore  LICENSE  README.md  partitions_2M.csv  partitions_4M.csv  partitions_4M_ota.csv  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp32c3  sdkconfig.defaults.mem_opt.esp32c2
DOIT_AI/components/78__esp-opus-encoder/: idf_component.yml  opus_decoder.cc  opus_encoder.cc
DOIT_AI/components/78__esp-opus-encoder/include/: opus_decoder.h  opus_encoder.h
DOIT_AI/components/espressif__esp_codec_dev/: idf_component.yml
DOIT_AI/components/espressif__esp_codec_dev/platform/: audio_codec_data_i2s.c
DOIT_AI/components/vb6824/: CMakeLists.txt  Kconfig  https.c  idf_component.yml  vb6824.c  vb6824.h  vb_ota.h
DOIT_AI/components/vb6824/assets/: update.html
DOIT_AI/main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  idf_component.yml
DOIT_AI/main/audio_codecs/: audio_codec.cc  audio_codec.h  vb6824_audio_codec.cc  vb6824_audio_codec.h
DOIT_AI/main/boards/common/: button.cc  button.h  wifi_board.h
DOIT_AI/main/boards/doit-ai-01-kit/: boards.cfg  boards.defaults  config.h  doit-ai-01-kit.cc
DOIT_AI/main/boards/doit-ai-01-kit-lcd/: boards.cfg  boards.defaults  config.h  doit-ai-01-kit-lcd.cc
DOIT_AI/main/boards/doit-ai-02-kit-lcd/: boards.cfg  boards.defaults  config.h  doit-ai-02-kit-lcd.cc
DOIT_AI/main/boards/doit-ai-speaker/: boards.cfg  config.h  doit-ai-speaker.cc
DOIT_AI/main/display/: lcd_display.cc
DOIT_AI/main/led/: circular_strip.cc  single_led.cc
